stocks tab basics

--- a/src/app/controls/stock-selector/stock-selector.component.html
+++ b/src/app/controls/stock-selector/stock-selector.component.html
@@ -1,1 +1,7 @@
-<p>stock-selector works!</p>
+<mat-form-field>
+  <mat-label>Symbol</mat-label>
+  <mat-select>
+    <mat-option>None</mat-option>
+    <mat-option *ngFor="let symbol of symbols" [value]="symbol">{{symbol}}</mat-option>
+  </mat-select>
+</mat-form-field>
