--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   align-items: center;
   justify-content: center;
 }
+
+input.ng-touched {
+  border: 3px solid lightblue;
+}
+input.ng-dirty.ng-valid {
+  border: 2px solid green;
+}
+input.ng-dirty.ng-invalid {
+  border: 2px solid red;
+}
