dynamic chart add/remove

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -8,7 +8,7 @@
           </button>
           <mat-menu #menu="matMenu" xPosition="before">
               <button mat-menu-item>Expand</button>
-              <button mat-menu-item>Remove</button>
+              <button mat-menu-item (click)="remove()">Remove</button>
           </mat-menu>
       </mat-card-title>
   </mat-card-header>
