--- a/src/app/controls/stock-selector/stock-selector.component.html
+++ b/src/app/controls/stock-selector/stock-selector.component.html
@@ -16,7 +16,7 @@
       <mat-option *ngFor="let symbol of symbols" [value]="symbol">{{symbol}}</mat-option>
     </mat-select>
     <!-- <mat-error *ngIf="animalControl.hasError('required')">Please choose an animal</mat-error> -->
-    <mat-hint>Stock symbol</mat-hint>
+    <!-- <mat-hint>Stock symbol</mat-hint> -->
   </mat-form-field>
 
 
