--- a/src/app/stocks/stocks.component.html
+++ b/src/app/stocks/stocks.component.html
@@ -16,7 +16,7 @@
       [rowspan]="( cardLayout | async )?.chart?.rows"
     >
       <app-card title="Stock price {{c.symbol}} - {{c.timeframe}}" (removed)="remove(c)">
-        <app-stock-price></app-stock-price>
+        <app-stock-price [stockChartData]="c"></app-stock-price>
       </app-card>
       <!-- <app-card title="Card {{c}}" (removed)="remove(c)"><div>Chart Content Here</div></app-card> -->
     </mat-grid-tile>
