--- a/src/app/charts/dividend-table/dividend-table.component.html
+++ b/src/app/charts/dividend-table/dividend-table.component.html
@@ -1,34 +1,101 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="dividend-table-container mat-elevation-z8">
+  <div class="dividend-table-loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  </div>
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="company">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.company}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="sector">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.sector}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="industry">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.industry}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-  
-  
+  <div class="dividend-table-table-container">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort matSortActive="company" matSortDisableClear matSortDirection="desc">
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
+        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      </ng-container>
+    
+      <!-- Company Column -->
+      <ng-container matColumnDef="company">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
+        <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+      </ng-container>
+    
+      <!-- Sector Column -->
+      <ng-container matColumnDef="sector">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
+        <td mat-cell *matCellDef="let element"> {{element.sector}} </td>
+      </ng-container>
+    
+      <!-- Industry Column -->
+      <ng-container matColumnDef="industry">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Industry </th>
+        <td mat-cell *matCellDef="let element"> {{element.industry}} </td>
+      </ng-container>
+
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+      </ng-container>
+
+      <!-- P/E Column -->
+      <ng-container matColumnDef="pe">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> P/E </th>
+        <td mat-cell *matCellDef="let element"> {{element.pe}} </td>
+      </ng-container>
+
+      <!-- Div Yield Column -->
+      <ng-container matColumnDef="div_yield">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Div Yield </th>
+        <td mat-cell *matCellDef="let element"> {{element.div_yield}} </td>
+      </ng-container>
+
+      <!-- 5y Avg Yield Column -->
+      <ng-container matColumnDef="avg_yield_5y">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> 5y Avg Yield </th>
+        <td mat-cell *matCellDef="let element"> {{element.avg_yield_5y}} </td>
+      </ng-container>
+
+      <!-- Current Div Column -->
+      <ng-container matColumnDef="current_div">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Current Div </th>
+        <td mat-cell *matCellDef="let element"> {{element.current_div}} </td>
+      </ng-container>
+
+      <!-- Previous Div Column -->
+      <ng-container matColumnDef="previous_div">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Previous Div </th>
+        <td mat-cell *matCellDef="let element"> {{element.previous_div}} </td>
+      </ng-container>
+
+      <!-- DGR 1y Column -->
+      <ng-container matColumnDef="dgr_1y">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DGR 1y </th>
+        <td mat-cell *matCellDef="let element"> {{element.dgr_1y}} </td>
+      </ng-container>
+
+      <!-- DGR 3y Column -->
+      <ng-container matColumnDef="dgr_3y">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DGR 3y </th>
+        <td mat-cell *matCellDef="let element"> {{element.dgr_3y}} </td>
+      </ng-container>
+
+      <!-- DGR 5y Column -->
+      <ng-container matColumnDef="dgr_5y">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DGR 5y </th>
+        <td mat-cell *matCellDef="let element"> {{element.dgr_5y}} </td>
+      </ng-container>
+
+      <!-- DGR 10y Column -->
+      <ng-container matColumnDef="dgr_10y">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DGR 10y </th>
+        <td mat-cell *matCellDef="let element"> {{element.dgr_10y}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of companies"></mat-paginator>
+  </div>
+</div>
