--- a/angular/src/app/charts/dividend-table/dividend-table.component.html
+++ b/angular/src/app/charts/dividend-table/dividend-table.component.html
@@ -91,6 +91,13 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> DGR 10y </th>
         <td mat-cell *matCellDef="let element"> {{element.dgr_10y}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Select</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button type="submit">Select</button>
+        </td>
+      </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
