--- a/angular/src/app/charts/dividend-table/dividend-table.component.html
+++ b/angular/src/app/charts/dividend-table/dividend-table.component.html
@@ -93,9 +93,9 @@
       </ng-container>
 
       <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Select</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Select2</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-raised-button type="submit">Select</button>
+          <button mat-raised-button type="submit">Select2</button>
         </td>
       </ng-container>
     
