--- a/angular/src/app/controls/dividend-selector/dividend-selector.component.html
+++ b/angular/src/app/controls/dividend-selector/dividend-selector.component.html
@@ -1,1 +1,1 @@
-<button (click)="onRule4()">Start rule4</button> 
+<button mat-raised-button type="submit" (click)="onRule4()">Start rule4</button> 
