--- a/angular/src/app/charts/dividend-table/dividend-table.component.html
+++ b/angular/src/app/charts/dividend-table/dividend-table.component.html
@@ -35,7 +35,9 @@
       <!-- Price Column -->
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        <td mat-cell *matCellDef="let element">
+          <button mat-button color="primary" (click)="getPrice(element.symbol)">{{element.price}}</button>
+        </td>
       </ng-container>
 
       <!-- P/E Column -->
